--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,6 +1,6 @@
 name: Greetings
 
-on: [pull_request_target, issues]
+on: [pull_request, issues]
 
 jobs:
   greeting:
@@ -9,24 +9,11 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-    - name: Leave comment
+    - name: Greeting
       uses: actions/github-script@v3
       with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-         const issueComment = "Thank you for creating issue, please tell us the issue you found 'please be detail' Thank you";
-const prComment = "Thank you for the pull request, we will review changes to see if a merge is warranted. Thank you.";
-
-let message;
-if (github.event.pull_request) {
-  message = prComment;
-} else {
-  message = issueComment;
-}
-
-github.issues.createComment({
-  issue_number: github.event.issue.number,
-  owner: github.repository.owner.login,
-  repo: github.repository.name,
-  body: message
-});
+          const eventType = github.event.pull_request ? 'pull request' : 'issue';
+          const greetingMessage = `Thank you for the ${eventType}, please let me know the details.`;
+  
