--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -1,24 +1,22 @@
-on: issue_comment
+name: Leave Comment
+
+on:
+  pull_request:
+    types: [opened, synchronize]
 
 jobs:
-  pr_commented:
-    # This job only runs for pull request comments
-    name: PR comment
-    if: ${{ github.event.issue.pull_request }}
+  comment:
     runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo A comment on PR $NUMBER
-        env:
-          NUMBER: ${{ github.event.issue.number }}
 
-  issue_commented:
-    # This job only runs for issue comments
-    name: Issue comment
-    if: ${{ !github.event.issue.pull_request }}
-    runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo A comment on issue $NUMBER
-        env:
-          NUMBER: ${{ github.event.issue.number }}
+    - name: Comment
+      uses: actions/github-script@v3
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          github.issues.createComment({
+            issue_number: github.event.pull_request.number,
+            owner: github.repository.owner.login,
+            repo: github.repository.name,
+            body: "Thank you for submitting this pull request! I will review it soon."
+          });
