--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -1,15 +1,14 @@
-name: Leave Comment
-
 on:
   pull_request:
-    types: [opened]
+    types:
+      - opened
 
 jobs:
-  comment:
+  comment_on_pr:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Comment
+    - name: Leave a comment on pull request
+      if: ${{ github.event.pull_request }}
       uses: actions/github-script@v3
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
