--- a/.github/workflows/issue_notes.yml
+++ b/.github/workflows/issue_notes.yml
@@ -1,15 +1,14 @@
-name: issue-checklist
-
+name: "Set Assignee"
 on:
-  issues:
-    types: [opened]
+  issues_comment:
+    types: [created]]
 
 jobs:
-  comment:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: ben-z/actions-comment-on-issue@1.0.2
-      with:
-        message: "Gentle reminder:\n* Did you go through all of the troubleshooting steps outlined in README.md?"
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: Amwam/issue-comment-action@v1.3.1
+        with:
+          keywords: '["test"]'
+          assignees: '["username"]'
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
