--- a/.github/workflows/issue_notes.yml
+++ b/.github/workflows/issue_notes.yml
@@ -1,18 +1,15 @@
-name: 'issue-comments-validate'
+name: Issue request notes
 on:
-  issue_comment:
-    types:
-      - created
-      - edited
+  issues:
+    types: [opened]
 
 jobs:
-  check:
+  comment_on_new_issue:
+    runs-on: ubuntu-latest
+    name: Job for commenting on new issue
     steps:
-      - id: step1
-        uses: fukuiretu/actions-issue-comment-validates@main
+      - name: Comment
+        uses: jd-0001/gh-action-comment-on-new-issue@v2.0.3
         with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - id: step2
-        run: |
-          echo "check1 result: ${{ steps.step1.outputs.check1 }}"
-          echo "check2 result: ${{ steps.step1.outputs.check2 }}"
+          message: 'Welcome to the repo :)'
+          ignore-label: 'internal'
