--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,24 +1,14 @@
-name: Mark stale issues and pull requests
-
+name: 'Close stale issues and PRs'
 on:
   schedule:
-  - cron: '37 6 * * *' # check daily at 6:37 am
+    - cron: '30 1 * * *'
 
 jobs:
   stale:
-
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
-
     steps:
-    - uses: actions/stale@v7
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'This issue has been inactive for 1 day and will be closed in 1 day if there is no activity.'
-        stale-pr-message: 'This pull request has been inactive for 1 day and will be closed in 1 day if there is no activity.'
-        stale-issue-label: 'no-issue-activity'
-        stale-pr-label: 'no-pr-activity'
-        days-before-stale: 1
-        days-before-close: 2
+      - uses: actions/stale@v7
+        with:
+          stale-issue-message: 'This issue is stale because it has been open 30 days with no activity. Remove stale label or comment or this will be closed in 5 days.'
+          days-before-stale: 1
+          days-before-close: 2
