--- a/.github/workflows/issue_notes.yml
+++ b/.github/workflows/issue_notes.yml
@@ -6,7 +6,10 @@ on:
 jobs:
   greet:
     runs-on: ubuntu-latest
+    name: Issue comment
     steps:
+      - name: checkout
+        uses: actions/checkout@v2
       - name: issue comment
         uses: kyoncy/issue-comment-actions@v1
         with:
