--- a/.github/workflows/issue_notes.yml
+++ b/.github/workflows/issue_notes.yml
@@ -1,4 +1,4 @@
-name: Comment on new issue
+name: Comment on New Issue
 
 on:
   issues:
@@ -7,19 +7,18 @@ on:
 jobs:
   greet:
     runs-on: ubuntu-latest
-    name: Issue comment
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-      - name: Issue comment
-        uses: kyoncy/issue-comment-actions@v1
-        with:
-          message: "Thank you for opening this issue, I'll take a look and get back to you soon."
-          token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Checkout
+      uses: actions/checkout@v2
 
-          # testing
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14
 
+    - name: Issue Comment
+      uses: kyoncy/issue-comment-actions@v1
+      with:
+        message: Thank you for opening this issue, I'll take a look and get back to you soon.
+        token: ${{ secrets.GITHUB_TOKEN }}
