--- a/.github/workflows/issue_notes.yml
+++ b/.github/workflows/issue_notes.yml
@@ -16,8 +16,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14
-
-    - name: Issue Comment
+      
+    - name: Issue comment
       uses: kyoncy/issue-comment-actions@v1
       with:
         message: Thank you for opening this issue, I'll take a look and get back to you soon.
