--- a/.github/workflows/comment_on_issue.yml
+++ b/.github/workflows/comment_on_issue.yml
@@ -1,21 +1,34 @@
-name: Label issues
+name: Label and Comment on Issues
+
 on:
   issues:
     types:
       - reopened
       - opened
+
 jobs:
-  label_issues:
+  label_and_comment_issues:
     runs-on: ubuntu-latest
     permissions:
       issues: write
     steps:
-      - uses: actions/github-script@v6
+      - name: Label Issues
+        uses: actions/github-script@v6
         with:
           script: |
             github.rest.issues.addLabels({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ["triage"]
+              labels: ["good first issue"]
+            })
+      - name: Comment on Issues
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Thanks for opening this issue! I have labeled it with "triage" and will take a look soon.'
             })
