--- a/.github/workflows/comment_on_issue.yml
+++ b/.github/workflows/comment_on_issue.yml
@@ -20,7 +20,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ["good first issue"]
+              labels: ["documentation"]
             })
       - name: Comment on Issues
         uses: actions/github-script@v6
@@ -30,5 +30,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Thanks for opening this issue! I have labeled it with "triage" and will take a look soon.'
+              body: 'Thanks for opening this issue! I have labeled it with "documentation" and will take a look soon.'
             })
