--- a/.github/workflows/label_on_pullrequest.yml
+++ b/.github/workflows/label_on_pullrequest.yml
@@ -1,6 +1,7 @@
 name: "Pull Request Labeler"
+
 on:
-- pull_request_target
+  pull_request_target
 
 jobs:
   triage:
@@ -12,4 +13,5 @@ jobs:
     - uses: actions/labeler@v4
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        labels: enhancement
+        configuration-path: .github/labeler.yml
+        sync-labels: false
