--- a/.github/workflows/auto_merge_pr.yml
+++ b/.github/workflows/auto_merge_pr.yml
@@ -1,4 +1,4 @@
-name: Auto-Merge 
+name: Auto-Merge
 on:
   pull_request_target:
     types: [labeled]
@@ -10,7 +10,10 @@ jobs:
     # Specifically check that jge162 (or another trusted party) created this pull-request, and that it has been labelled correctly.
     if: github.event.pull_request.user.login == 'jge162' && contains(github.event.pull_request.labels.*.name, 'enhancement')
     steps:
-    - uses: alexwilson/enable-github-automerge-action@main
+    - uses: daneden/enable-automerge-action@v1
       with:
         github-token: "${{ secrets.GITHUB_TOKEN }}"
+        allowed-author: jge162
+        merge-method: MERGE
+
 
