--- a/.github/workflows/auto_merge_pr.yml
+++ b/.github/workflows/auto_merge_pr.yml
@@ -2,7 +2,7 @@ name: Auto Merge PRs
 
 on:
   pull_request:
-    types: [labeled]
+    types: [opened, synchronize, reopened, labeled, unlabeled, edited, ready_for_review, unlocked]
 
 jobs:
   merge-prs:
@@ -17,4 +17,3 @@ jobs:
         uses: pascalgn/automerge-action@v0.15.5
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-# example automerge
