--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -12,12 +12,5 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # using the `org/team_slug` or `/team_slug` syntax to add git team as reviewers
-          reviewers: |
-            reviewer1
-            reviewer2
-            reviewer3
-            org/teamReviewerA
-            org/teamReviewerB
-            /teamReviewerC
-          assignees: jge162, assignee2, assignee3
+          assignees: jge162
           skipKeywords: wip, draft
