--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,16 +1,13 @@
-name: Issue assignment
-
+name: "Auto Assign"
 on:
-    issues:
-        types: [opened]
+  pull_request:
+    types: [opened]
 
 jobs:
-    auto-assign:
-        runs-on: ubuntu-latest
-        steps:
-            - name: 'Auto-assign issue'
-              uses: pozil/auto-assign-issue@v1
-              with:
-                  assignees: octocat,cat,dog
-                  numOfAssignee: 2
-                  allowSelfAssign: false
+  assign:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: shufo/auto-assign-reviewer-by-issuer@v1.0.0
+      with:
+        config: '.github/reviewers.yml'
+        token: ${{ secrets.GITHUB_TOKEN }}
