--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,13 +1,16 @@
-name: "Auto Assign"
+name: "Set Issue Label and Assignee"
 on:
-  pull_request:
+  issues:
     types: [opened]
+  pull_request:
+    typed: [opened]
 
 jobs:
-  assign:
+  test:
     runs-on: ubuntu-latest
     steps:
-    - uses: shufo/auto-assign-reviewer-by-issuer@v1.0.0
-      with:
-        config: '.github/reviewers.yml'
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: Naturalclar/issue-action@v2.0.2
+        with:
+          title-or-body: "both"
+          parameters: [ {"keywords": ["bug", "error"], "labels": ["BUG"], "assignees": ["jge162"]}, {"keywords": ["help", "guidance"], "labels": ["documentation"], "assignees": ["jge162"]}]
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
