--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,11 +1,22 @@
-name: "Issue volunteer assignment"
-
-on: [issue_comment]
-
+on:
+  issues:
+    types: [opened, edited, labeled, unlabeled]
+  pull_request:
+    types: [opened, edited, labeled, unlabeled]
 jobs:
-  build:
+  run:
     runs-on: ubuntu-latest
     steps:
-    - uses: bhermann/issue-volunteer@v0.1.12
-      with:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - uses: wow-actions/auto-assign@v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # using the `org/team_slug` or `/team_slug` syntax to add git team as reviewers
+          reviewers: |
+            reviewer1
+            reviewer2
+            reviewer3
+            org/teamReviewerA
+            org/teamReviewerB
+            /teamReviewerC
+          assignees: jge162, assignee1, assignee2, assignee3
+          skipKeywords: wip, draft 
