--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Auto Assign
         uses: wow-actions/auto-assign@v3
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MY_SECRET }}
           reviewers: 
           assignees: jge162
           skipKeywords: wip, draft 
