--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -11,6 +11,6 @@ jobs:
       uses: madrapps/add-reviewers@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        reviewers: john,kramer,seinfeld
+        reviewers: jge162
         re-request-when-approved: true
         re-request-when-changes-requested: true
