--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,5 +1,16 @@
--  name: Add Automatic Pull Request Reviewers
-      uses: buzato/add-reviewer-gh-action@1.0.5
-      with: 
-        reviewers: "jge162"
-        token: ${{ secrets.GITHUB_TOKEN }}
+name: Auto Assign
+
+on:
+  pull_request:
+    types:
+      - opened
+      - reopened
+
+jobs:
+  add_assignees:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions-ecosystem/action-add-assignees@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          assignees: ${{ github.actor }}
