--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -4,9 +4,12 @@ name: Auto Author Assign
 on:
   pull_request_target:
     types: [ opened, reopened ]
+  issues:
+    types: [ opened, reopened ]
 
 permissions:
   pull-requests: write
+  issues: write
 
 jobs:
   assign-author:
