--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -24,4 +24,5 @@ jobs:
     - run: |
         echo "Run, Build Application using script"
         python3 ./build/sh.py
+        Python3 ./script.py
 # test
