--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -23,6 +23,6 @@ jobs:
         chmod +x ./build/sh.py
     - run: |
         echo "Run, Build Application using script"
-        Python3 ./script.py
+        python3 ./script.py
 
 # test python3 ./build/sh.py
