--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -22,7 +22,7 @@ jobs:
     - run: |
         echo "Run, Build Application using scripts"
         python3 -c "
-        scripts = ['./script.py']
+        scripts = ['./script.py', './script2.py']
         for script in scripts:
             with open(script, 'r') as file:
                 exec(file.read())
