--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Get the current version
         id: get-version
-        uses: actions/bin/filter@v1
+        uses: actions/filter@v1
         with:
           args: cat package.json
           stdin: ${{ steps.check-if-merged.outputs.result }}
