--- a/.github/workflows/comment_on_pullrequest.yml
+++ b/.github/workflows/comment_on_pullrequest.yml
@@ -6,27 +6,21 @@ on:
 jobs:
   pr:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read & write
     steps:
       - name: Comment_on_pullrequest
         uses: mshick/add-pr-comment@v2
         with:
+          token: ${{ secrets.WORKFLOW_SECRET }}
           if: always()
           message: |
             ## Description
-
             Please include a summary of the change and which issue is fixed. 
             Please also include relevant motivation and context. 
             List any dependencies that are required for this change.
-
             ## Type of change
-
             - [ ] Bug fix (non-breaking change which fixes an issue)
             - [ ] New feature (non-breaking change which adds functionality)
-
             ## Checklist:
-
             - [ ] My code follows the style guidelines of this project
             - [ ] I have performed a self-review of my own code
             - [ ] I have commented my code, particularly in hard-to-understand areas
