--- a/.github/workflows/comment_on_pullrequest.yml
+++ b/.github/workflows/comment_on_pullrequest.yml
@@ -6,14 +6,11 @@ on:
 jobs:
   pr:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
     steps:
       - name: Comment_on_pullrequest
         uses: mshick/add-pr-comment@v2
         with:
-          token: ${{ secrets.WORKFLOW_TOKEN }}
-          if: always()
+          repo-token: ${{ secrets.WORKFLOW_TOKEN }}
           message: |
             ## Description
             Please include a summary of the change and which issue is fixed. 
