--- a/.github/workflows/comment_on_pullrequest.yml
+++ b/.github/workflows/comment_on_pullrequest.yml
@@ -27,6 +27,6 @@ jobs:
           message-failure: |
             Uh oh!
           message-id: add-pr-comment
-          repo-token: ${{ secrets.MY_SECRET }}
+          repo-token: ${{ secrets.WORKFLOW_SECRET }}
           allow-repeats: false
           status: success
