--- a/.github/workflows/comment_on_pullrequest.yml
+++ b/.github/workflows/comment_on_pullrequest.yml
@@ -12,18 +12,7 @@ jobs:
         with:
           message: |
             ## Description
-            Please include a summary of the change and which issue is fixed. 
-            Please also include relevant motivation and context. 
-            List any dependencies that are required for this change.
-            ## Type of change
-            - [ ] Bug fix (non-breaking change which fixes an issue)
-            - [ ] New feature (non-breaking change which adds functionality)
-            ## Checklist:
-            - [ ] My code follows the style guidelines of this project
-            - [ ] I have performed a self-review of my own code
-            - [ ] I have commented my code, particularly in hard-to-understand areas
-            - [ ] My changes generate no new warnings
-            - [ ] I have added tests that prove my fix is effective or that my feature works
+            - [ ] Please include a summary of the change and which issue is fixed. 
           message-failure: |
             Uh oh!
           message-id: add-pr-comment
