--- a/.github/workflows/comment_on_pullrequest.yml
+++ b/.github/workflows/comment_on_pullrequest.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           message: |
             ## Description
-            - [ ] Please include a summary of the change and which issue is fixed. 
+            - [ ] Please include a summary of the change and/or which issues have been fixed. 
           message-failure: |
             Uh oh!
           message-id: add-pr-comment
