--- a/.github/workflows/comment_on_pullrequest.yml
+++ b/.github/workflows/comment_on_pullrequest.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Comment_on_pullrequest
+        if: github.event.pull_request.user.login == 'jge162'
         uses: mshick/add-pr-comment@v2
         with:
           message: |
